# NEFN

./: Dockerfile  LightSpeedMOD.png.import  README.md  docker-compose.yml  icon.svg.import  project.godot
addons/com.heroiclabs.nakama/: Nakama.gd  Nakama.gd.uid
addons/com.heroiclabs.nakama/api/: NakamaAPI.gd.uid  NakamaRTAPI.gd.uid  NakamaRTMessage.gd.uid  NakamaSession.gd  NakamaSession.gd.uid  NakamaStorageObjectId.gd.uid  NakamaWriteStorageObject.gd.uid
addons/com.heroiclabs.nakama/client/: NakamaClient.gd.uid  NakamaHTTPAdapter.gd.uid
addons/com.heroiclabs.nakama/dotnet-utils/: GodotHttpAdapter.cs  GodotHttpAdapter.cs.uid  GodotLogger.cs  GodotLogger.cs.uid  GodotWebSocketAdapter.cs  GodotWebSocketAdapter.cs.uid
addons/com.heroiclabs.nakama/socket/: NakamaSocket.gd.uid  NakamaSocketAdapter.gd  NakamaSocketAdapter.gd.uid
addons/com.heroiclabs.nakama/utils/: NakamaAsyncResult.gd.uid  NakamaException.gd.uid  NakamaLogger.gd.uid  NakamaMultiplayerBridge.gd.uid  NakamaMultiplayerPeer.gd.uid  NakamaSerializer.gd.uid
addons/nefn/: config.example.tres  config.gd  config.gd.uid  config.tres  plugin.cfg  plugin.gd  plugin.gd.uid  server_config.gd  server_config.gd.uid
docs/: Docker_Setup.md  NEFN_Framework.md  ServerConfig.md
example/: main.gd  main.gd.uid  main.tscn  server_example.gd  server_example.gd.uid
example/scenes/: server_scene.gd  server_scene.gd.uid  server_scene.tscn
server/: README.md
server/enet/: CMakeLists.txt  Dockerfile
server/nakama/: nakama.yml  nakama.yml.uid
server/noray/: CMakeLists.txt  Dockerfile
(+26 files in other folders)
